Removed javaOptions and volumes